<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DEVOTE</string>


    <string name="cancel">취소</string>
    <string name="no">아니요</string>
    <string name="yes">예</string>
    <string name="confirm">확인</string>
    <string name="close">닫기</string>
    <string name="setting">설정</string>
    <string name="str_done">완료</string>
    <string name="edit">수정</string>

    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="done">DONE</string>

    <string name="camera">카메라</string>
    <string name="alarma">알림 </string>
    <string name="location">위치 </string>
    <string name="agree">동의합니다.</string>
    <string name="picture">촬영하기</string>
    <string name="not_view">다시보지않기</string>
    <string name="notice">공지사항</string>
    <string name="payment_done">지급 완료</string>
    <string name="icx">ICX</string>
    <string name="ad4th_copyright">Copyright 2018 - AD4th Insight Inc.</string>
    <string name="icon_copyright">©2018 ICON Foundation.</string>

    <string name="my_wallet">나의 ICX 지갑</string>
    <string name="my_balance">현재 보유 ICX</string>
    <string name="my_icx">MY ICX</string>

    <!-- 퍼미션 관련 시작 -->
    <string name="permission">필수적 접근 권한</string>
    <string name="permission_info">앱 접근 권한 안내</string>
    <string name="permission_info_comment">DEVOTE에서는 원활한 앱 이용을 위해서\n아래 권한들을 사용하오니 확인 부탁드립니다.</string>
    <string name="permission_camera_use">투표장에 비치된 QR코드 스캔 목적</string>
    <string name="permission_push_use">투표 시작 안내 및 결과 전달 목적</string>
    <string name="permission_gps_use">QR코드 진위 여부 확인 목적</string>
    <string name="permission_gps_agree"><u>위치정보 서비스 이용약관</u></string>
    <string name="permission_use_ok">확인하고 DEVOTE를 시작합니다.</string>
    <!-- 퍼미션 관련 종료 -->

    <!-- 메인 시작 -->
    <string name="main_title">불금의 ICON</string>
    <string name="main_title_sub">NEW KINDS ON THE BLOCK(CHAIN)</string>
    <string name="main_title_comment">데모데이 투표에 참여하세요!</string>
    <!-- 메인 종료 -->

    <!-- 지갑 관련 시작  -->
    <string name="wallet_regedit">ICX 지갑 등록</string>
    <string name="wallet_create">ICX 지갑 생성</string>
    <string name="wallet_create_successed">ICX 지갑 생성 완료</string>
    <string name="wallet_create_successed_comment">아래 생성된 Private Key 를 저장하여 투표 참여 시 사용하세요.</string>
    <string name="wallet_address">Address</string>
    <string name="wallet_address_comment">투표 접수시 사용됩니다. 개인 용도로 사용할 수 없습니다.</string>
    <string name="wallet_private_copy">Private Key 복사하기</string>
    <string name="wallet_private">Private Key</string>
    <string name="wallet_password_fommat">최소 4자 이상</string>
    <string name="wallet_private_comment">투표 참여시 사용됩니다. <b><u>반드시 안전한 곳에 저장해 두세요!</u></b></string>
    <string name="wallet_private_comment_2">Private Key 에 액세스 할 수 있는 모든 사람이 귀하의 허락없이 지갑에서 자산을 이전할 수 있습니다. 따라서 Private Key 관리에 특별한 주의가 필요합니다.</string>
    <string name="wallet_create_with_voting">지갑 등록 및 투표 접수</string>
    <string name="wallet_address_reg">지갑 등록</string>
    <string name="wallet_address_reg_finish">ICX 지급</string>
    <string name="wallet_address_reg_finish_info"><font color='#000000'>행사장에서 지급받은</font>\n<b><font color='#462c9d'>투표접수 QR코드</font></b><font color='#000000'>를 촬영하면</font></string>
    <string name="wallet_address_reg_finish_info2">등록하신 지갑으로\n{icx} ICX가 지급되며,\n투표 접수가 완료됩니다!</string>
    <string name="wallet_my">내 지갑 정보 확인</string>
    <string name="wallet_address_input">ICX Address 를 입력해주세요.</string>
    <string name="wallet_address_input_hint">ICX Address 를 입력해주세요.</string>
    <string name="wallet_reg">지갑 등록</string>
    <string name="wallet_create_ing">ICX 지갑 만들기</string>
    <string name="wallet_create_comment">투표에 필요한 ICX를\n지급받을 지갑을 만드세요!</string>
    <string name="wallet_join">이미 ICX 지갑을 보유하고 있습니다.</string>
    <string name="wallet_signUp_comment">지갑 password를 설정하세요.</string>
    <string name="wallet_signUp_name">Wallet name</string>
    <string name="wallet_signUp_password">Password</string>
    <string name="wallet_signUp_password_re">Password 확인</string>
    <string name="wallet_private_key_save">Private Key 저장하기(필수)</string>
    <string name="wallet_address_key_copy">Address 복사하기</string>
    <string name="wallet_voting_info">ICX를 사용하여 <font color='#462c9d'>{teamName}</font>에 투표하시려면 다음 정보를 입력해주세요.</string>
    <string name="wallet_address_copy">Address 가 복사되었습니다.</string>
    <string name="wallet_privateKey_copy">Private Key 가 복사되었습니다.</string>
    <string name="wallet_privateKey_save">Private Key 저장</string>
    <string name="wallet_address_info">*Address 는 마이페이지에서 확인 하실 수 있습니다.</string>
    <string name="wallet_step_1">지갑생성</string>
    <string name="wallet_step_2">비밀번호설정</string>
    <string name="wallet_step_3">지갑확인</string>
    <string name="wallet_step_4">QR코드등록</string>

    <!-- 지갑 관련 종료 -->

    <!-- Voting 시작 -->
    <string name="voting_reg">투표 접수하기</string>
    <string name="voting_join">투표 참여하기</string>
    <string name="voting_reception">투표접수</string>
    <string name="voting_reception_comment">행사장에서 지급받은 QR코드를 찍어주세요.</string>
    <string name="voting_successed">투표완료</string>
    <string name="voting_ready">투표 준비 중</string>
    <string name="voting_start">투표 시작하기</string>
    <string name="voting_period">투표 기간</string>
    <string name="voting_ing">투표하기</string>
    <string name="voting_private_key_hint">투표 참여 시에는 Private Key를 입력해주셔야 합니다. Private Key를 입력 해주세요!</string>
    <string name="voting_password_hint">Password를 입력해 주세요.</string>
    <string name="voting_info_commnet">지급받은 ICX로 투표에 참여해보세요!</string>
    <string name="voting_result_commnet">투표 종료 후, 결과 집계가 완료되면\n투표 결과를 확인하실 수 있습니다.</string>
    <string name="voting_result_check">투표결과 확인하기</string>
    <string name="voting_result">투표결과</string>
    <string name="voting_completed">접수 완료</string>
    <!-- Voting 종료 -->

    <!-- 진행 표시형 문구 시작 -->
    <string name="step1">STEP1</string>
    <string name="step2">STEP2</string>
    <string name="step_next">다음 단계로</string>
    <!-- 진행 표시형 문구 종료 -->

    <!--  테스트넷 시작 -->
    <string name="net_test_info_main">본 서비스는 ICON 테스트넷에서 진행 중입니다.</string>
    <string name="net_test_info_wallet">본 행사에서 생성한 지갑은 <b>1회용 지갑</b>으로 실거래에 사용할 수 없습니다.\n이용에 참고하여 주시기 바랍니다.</string>
    <string name="net_test_info_voting">본 행사에서 지급되는 ICX는 실거래와 무관한 투표용 ICX입니다.</string>
    <string name="net_test_info_my">본 행사에서 생성한 지갑은 1회용 지갑으로 실거래에 사용할 수 없습니다. 이용에 참고하여 주시기 바랍니다.</string>
    <!--  테스트넷 종료 -->

    <!-- QR 코드 -->
    <string name="qrcode_not_valid">유효하지 않은 CODE 입니다.</string>

    <!--alert 시작-->
    <string name="alert_title_update">업데이트 안내</string>
    <string name="alert_title_event">행사 안내</string>
    <string name="alert_network_error">시스템 장애로 현재 이용에 제한이 되고 있습니다.\서비스 이용 불편 드려 죄송합니다.\n잠시 후 다시 시도해주시기 바랍니다.</string>
    <string name="alert_wallet_address_not">주소를 입력해 주세요.</string>
    <string name="alert_wallet_address_not_formet">유효하지 않은 지갑 주소입니다.</string>
    <string name="alert_wallet_private_key_not">Private Key를 입력해 주세요.</string>
    <string name="alert_wallet_private_key_not_formet">유효하지 않은 Private Key 입니다.</string>
    <string name="alert_password_null">비밀번호를 입력해 주세요.</string>
    <string name="alert_password_not">비밀번호가 일치하지 않습니다.</string>
    <string name="alert_password_format">비밀번호는 최소 4자 이상 입력해 주세요.</string>
    <string name="alert_status_gps_use">GPS 사용설정</string>
    <string name="alert_status_gps_granted">위치 서비스 설정이 꺼져 있어 현재 위치를 확인할 수 없습니다.\n설정을 변경하시겠어요?</string>
    <string name="alert_no_gps_info">현재 위치를 확인할 수 없습니다.\n잠시 후 다시 시도해 주세요.</string>
    <string name="alert_permission_gps_use">위치 정보 권한</string>
    <string name="alert_permission_location_agree">위치 정보 수집 동의 후 진행해 주세요.</string>
    <string name="alert_permission_gps_granted">앱의 위치 정보 권한이 없습니다.\n위치 정보 권한을 활성화해주세요.</string>
    <string name="alert_permission_camera">해당 앱을 사용하기 위해서는 권한을 허용해 주셔야 합니다. 앱 설정화면으로 이동합니다.</string>
    <string name="alert_force_update">새 버전이 업데이트 되었습니다.\n업데이트 후 사용하실 수 있습니다. 확인을 누르면 앱스토어로 이동합니다.</string>
    <string name="alert_need_update">새 버전이 업데이트 되었습니다.\n확인을 누르면 앱스토어로 이동합니다.</string>
    <string name="alert_not_continue_event">현재 진행 중인 행사가 없습니다.</string>
    <string name="alert_not_term_voting">투표 가능 시간이 아닙니다.</string>
    <string name="alert_overlap_voting">이미 투표를 진행하였습니다. 결과를 기다려주세요.</string>
    <string name="alert_voting_continue_wait">투표가 진행 중입니다. 결과를 기다려주세요.</string>
    <string name="alert_voting_success_wait">투표가 완료되었습니다. 결과를 기다려주세요.</string>
    <string name="alert_net_type_test">본 행사에서 생성한 지갑은 1회용 지갑으로 실거래에 사용할 수 없습니다. 이용에 참고하여 주시기 바랍니다.</string>
    <string name="alert_net_type_change_main">본 행사에서 이용되는 ICX 지갑은 실거래용 지갑입니다.\n 지난 행사에서 발급받았던 1회용 지갑은 이용하실 수 없습니다.</string>
    <string name="alert_net_type_change_test">본 행사에서는 기존 보유 중인 ICX 지갑은 이용하실 수 없습니다. 1회용 지갑으로 발급받아 이용해주시기 바랍니다.</string>
    <string name="alert_voting_limit_end">선착순 투표 접수가 종료 되었습니다.\n아쉽지만, 다음 기회에 참여해주세요.</string>
    <string name="alert_walllet_done">등록하신 지갑으로\n{icx} ICX가 지급되었습니다.\n 투표에 참여해주세요.</string>
    <string name="alert_voting_not_icx">투표 가능한 ICX가 없습니다.</string>
    <string name="alert_privateKey_not_valid">Private Key가 유효하지 않습니다.</string>
    <string name="alert_voting_team_choice">투표하실 팀을 선택해 주세요.</string>
    <string name="alert_new_event">새로운 행사에 참석하셨습니다. 기존 ICON 테스트넷에서 발급한 지갑정보는 초기화 됩니다.</string>
    <string name="alert_privateKey_not_save">Private key 를 저장해주세요!</string>
    <string name="alert_privateKey_save_check">Private key 를 안전한 곳에 저장하셨습니까?</string>

    <!-- 메뉴 -->
    <string name="menu_mywallet">내 지갑 정보</string>
    <string name="menu_version">버전 정보</string>
    <string name="menu_protection">개인정보 처리방침</string>
    <string name="current_version">현재 버전</string>
    <string name="new_version">최신 버전</string>
    <string name="new_update">최신 버전 업데이트</string>
    <string name="non_wallet">지갑이 없습니다.</string>
</resources>
