<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_bg">

    <!-- Menu -->
    <Button
        android:id="@+id/menu_bt"
        android:layout_width="22dp"
        android:layout_height="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/ic_menu_w"/>

    <!-- Content Start -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutBottom"
        android:paddingTop="80dp">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/devote" />

            <TextView
                android:id="@+id/textViewMainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/main_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout2"
            android:layout_below="@+id/layout1"
            android:paddingBottom="35dp"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:paddingTop="30dp"
            android:src="@drawable/ic_voting" />

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitleComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/main_title_comment"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTestNet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal"
                android:text="@string/net_test_info_main"
                android:textColor="@color/orange"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>

    <!-- Content End -->


    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonVoting"
            style="@style/Button.Stype01"
            android:text="@string/voting_reg"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonJoin"
            style="@style/Button.Stype01"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_bora"
            android:text="@string/voting_join" />

        <Button
            android:id="@+id/buttonResult"
            style="@style/Button.Stype01"
            android:text="@string/voting_result_check"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
