<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/intro_bg">

        <!-- Content Start -->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnContinue"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="40dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/devote" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="43dp"
                android:background="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="38dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_info"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/permission_info_comment"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="49dp"
                    android:text="@string/permission"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <!-- 카메라 시작 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="11dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/camera"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/permission_camera_use"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>
                <!-- 카메라 종료 -->

                <!-- 알림 시작 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_push" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="11dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarma"

                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/permission_push_use"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>
                <!-- 알림 종료 -->

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="37dp"
                android:background="@color/white" />


        </LinearLayout>

        <!-- Content End -->

        <!-- 앱 시작 버튼 -->
        <Button
            android:id="@+id/btnContinue"
            style="@style/Button.Stype01"
            android:layout_alignParentBottom="true"
            android:text="@string/permission_use_ok" />
    </RelativeLayout>

    <include
        android:id="@+id/layoutLocationAgree"
        layout="@layout/layout_popup_agree"
        android:visibility="gone" />
</RelativeLayout>


